--- a/src/index.css
+++ b/src/index.css
@@ -11,12 +11,13 @@ body {
 .wf-kokoro { font-family: "Kokoro"; }
 
 .container{
-  border: solid 1px black;
-  height: 100vh;
+  /* border: solid 1px black; */
+  height: 50%;
   margin: 0 auto;
   overflow: hidden;
   position: relative;
-  width: 50%;
+  width: 100%;
+  background-color: #000000; 
 
 }
  .container p {
@@ -30,6 +31,7 @@ body {
   animation-iteration-count:infinite;/*アニメーションの動作回数*/
   position:absolute;
   display: inline-block;
+  font-size:30px;
 }
 .container p:hover{
     animation-play-state: paused;
